test/sema/negative/movesema/struct_not_fully_init.impala
struct Pair {
    x1: int,
    x2: int
}

fn f() -> Pair {
    let p: Pair;
    p.x2 = 4;
    p
}
